adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,7 @@
     <h1>Olá Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque cum possimus porro, voluptatum aspernatur nesciunt dolore nobis. Accusamus ea officia dicta excepturi ducimus. Et maxime magnam repellat aut eveniet. Iure!</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas aspernatur aliquam temporibus optio consectetur sequi perspiciatis laboriosam neque inventore sint accusantium expedita esse, cum vel eaque repudiandae veniam adipisci!</p>
+
 </body>
 </html>
