--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -6,6 +6,21 @@
     <title>Meu primeiro site em repositório</title>
 </head>
 <body>
+    <header>
+    <h1> Título do site</h1>
+    </header>
+
+    <article>
+        <h2> Artigo 001</h2>
+        <p> Texto do artigo 001</p>
+    </article>
+
+    <article>
+        <h2> Artigo 002</h2>
+        <p> Texto do artigo 002</p>
+    </article>
+
+
     <h1>Olá Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque cum possimus porro, voluptatum aspernatur nesciunt dolore nobis. Accusamus ea officia dicta excepturi ducimus. Et maxime magnam repellat aut eveniet. Iure!</p>
