--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -7,17 +7,17 @@
 </head>
 <body>
     <header>
-    <h1> Título do site</h1>
+    <h1> Cursos grátis</h1>
     </header>
 
     <article>
-        <h2> Artigo 001</h2>
-        <p> Texto do artigo 001</p>
+        <h2> Curso de HTML 5 e CSS 3</h2>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim neque ex facilis accusantium et magni qui cum ipsum temporibus! Distinctio saepe, impedit expedita voluptate quidem ipsa! Distinctio excepturi unde maiores.</p>
     </article>
 
     <article>
-        <h2> Artigo 002</h2>
-        <p> Texto do artigo 002</p>
+        <h2> Curso de Java</h2>
+        <p> Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sequi exercitationem repellendus vitae dolore ex dicta at alias perspiciatis tempore magnam, sint nobis molestiae aliquam perferendis quidem ducimus labore debitis excepturi!</p>
     </article>
 
 
