--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu primeiro site em repositório</title>
+    <title>Site CursoeVideo</title>
     <link rel="stylesheet" href="estilos/styles.css">
 </head>
 <body>
@@ -24,6 +24,7 @@
 
     <h1>Olá Mundo!</h1>
     <hr>
+    <h2>Meu primeiro site em repositório</h2>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Atque cum possimus porro, voluptatum aspernatur nesciunt dolore nobis. Accusamus ea officia dicta excepturi ducimus. Et maxime magnam repellat aut eveniet. Iure!</p>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime quas aspernatur aliquam temporibus optio consectetur sequi perspiciatis laboriosam neque inventore sint accusantium expedita esse, cum vel eaque repudiandae veniam adipisci!</p>
 
